[IMP] Add Discount on each line

--- a/views/purchase_discount_view.xml
+++ b/views/purchase_discount_view.xml
@@ -32,6 +32,7 @@
                 <field
                     name="discount"
                     attrs="{'readonly': [('qty_invoiced', '!=', 0)]}"
+                    groups="product.group_discount_per_so_line" optional="show" widget="sol_discount"
                 />
             </xpath>
             <xpath
